--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Поиск вузов Самары</title>
     <!-- Подключаем Telegram WebApp SDK, как в ЛР6 -->
-    <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <script src="script.js"></script>
     <style>
         * {
             margin: 0;
@@ -438,4 +438,5 @@
 </body>
 
 </html>
+
 
