--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
     <div class="card">
         <div class="input-group">
             <input type="text" id="searchInput" placeholder="Например: балл 210 математика">
+            <button id="searchBtn">Найти</button>
         </div>
 
         <div class="examples">
@@ -165,4 +166,3 @@
 
 </body>
 </html>
-
